Application completed, styling and documentation finished

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1 {
     font-family: 'Courier New', Courier, monospace
 }
 .wrapper {
-    margin: 0 auto;
+    display: block;
 }
 ul {
     list-style-position: inside;
